# StudyOS

./: .env  README.md  index.html  pyproject.toml  script.js  studyos.db  style.css
Backend/: main.py  tasks.py
Frontend/: index.html  style.css
app/: config.py  main.py
app/db/: models.py  session.py
app/services/: ingestion.py
app/vector_store/: Chroma.py
