[project]
name = "studyos"
version = "0.1.0"
description = "AI-powered personal study system"
requires-python = ">=3.11"

[project.dependencies]
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "sqlmodel>=0.0.18",
    "python-dotenv>=1.0.0",
    "pydantic-settings>=2.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"